👷 Add Jobs in GH Actions

--- a/.github/workflows/test-runner.yml
+++ b/.github/workflows/test-runner.yml
@@ -9,3 +9,7 @@ jobs:
         run: yarn
       - name: Run tests
         run: yarn test
+      - name: Check Types with TSC
+        run: yarn types
+      - name: Run eslint
+        run: yarn lint
