--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.22.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.34.7",
     "react-scripts": "4.0.3",
     "typescript": "^4.5.4",
     "web-vitals": "^1.1.2"
